@@ -50,6 +50,7 @@ Version 2.3.0 - The river knows.
 		* Add option to show chat messages in log
 		* Add option to specify amuleweb binary location
 		* Add checks to cas to prevent segfaults
+		* Fix wxCas save file dialog for file types
 
 	Special Thanks To:
 		* Greek for his contributions to aMule's user interface.
